--- a/nodejs/express/Sequelize/views/create.hbs
+++ b/nodejs/express/Sequelize/views/create.hbs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Добавление пользователя</title>
+    <title>Добавление Записи</title>
     <meta charset="utf-8" />
     <style>.field{width:180px;}</style>
 </head>
 <body>
-    <h1>Добавление пользователя</h1>
+    <h1>Добавление links</h1>
      <form method="POST">
-        <label>Имя</label><br>
-        <input name="name" class="field"/><br><br>
-        <label>Возраст</label><br>
-        <input name="age" type="number" class="field" min="1" max="110" /><br><br>
+        <label>Url</label><br>
+        <input name="url" class="field"/><br><br>
+        <label>Info</label><br>
+        <input name="info" class="field"/><br><br>
+        <label>Дата</label><br>
+        <input name="regdate" type="date" class="field"/><br><br>
         <input type="submit" value="Отправить" />
      </form>
-     <a href="/">К списку пользователей</a>
+     <a href="/">К списку ссылок</a>
 </body>
 <html>
