--- a/nodejs/express/Sequelize/views/edit.hbs
+++ b/nodejs/express/Sequelize/views/edit.hbs
@@ -8,7 +8,7 @@
 <body>
     <h1>Редактирование записи</h1>
      <form action="/edit" method="POST">
-        <input type="hidden" name="id" value="{{user.id}}" />
+        <input type="hidden" name="id" value="{{links.id}}" />
         <label>url</label><br>
         <input name="url" value="{{links.url}}"  class="field" /><br><br>
         <label>Info</label><br>
